<resources>
    <string name="app_name" translatable="false">Demo App</string>
    <string name="contacts">Contacts</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="city">City</string>
    <string name="phone">Phone Number</string>
    <string name="notes">Notes</string>
    <string name="add_contact">Add Contact</string>
    <string name="contacts_activity">Contacts Activity</string>
    <string name="group_chat_activity">Group Chat Activity</string>
    <string name="chat_home_activity">Chat Home Activity</string>
    <string name="contacts_raw_label">Raw</string>
    <string name="contacts_adapter_label">Adapter</string>
    <string name="contacts_recycler_label">Recycler</string>
    <string name="send">Send</string>
    <string name="performance_string">Views Created: %d, Time To Bind: %dms</string>
    <string name="performance_string_loading">Loading…</string>
    <string name="refresh">Refresh</string>
    <string name="regenerate">Regenerate</string>
    
    <!-- Special Tag Identifiers, bit of a hack -->
    <string name="tag_contact_fragment">ContactFragment</string>
    <string name="tag_contact_adapter_fragment">ContactAdapterFragment</string>
    <string name="tag_contact_recycler_fragment">ContactRecyclerFragment</string>
</resources>
